// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScreenSkeleton > renders the card-list skeleton structure 1`] = `
<DocumentFragment>
  <div
    data-style="{"flex":1,"padding":16,"gap":12}"
    data-testid="screen-skeleton-card-list"
  >
    <div
      data-style="{"padding":16,"borderRadius":16}"
      data-testid="card-list-card"
    >
      <div
        data-accessibility-elements-hidden="true"
        data-accessible="false"
        data-important-for-accessibility="no-hide-descendants"
        data-style="[{"height":16,"width":"40%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
        data-testid="skeleton-block"
      />
      <div
        data-style="{"height":8}"
      />
      <div
        data-accessibility-elements-hidden="true"
        data-accessible="false"
        data-important-for-accessibility="no-hide-descendants"
        data-style="[{"height":12,"width":"70%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
        data-testid="skeleton-block"
      />
      <div
        data-style="{"height":12}"
      />
      <div
        data-accessibility-elements-hidden="true"
        data-accessible="false"
        data-important-for-accessibility="no-hide-descendants"
        data-style="[{"height":36,"width":"100%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
        data-testid="skeleton-block"
      />
    </div>
    <div
      data-style="{"padding":16,"borderRadius":16}"
      data-testid="card-list-card"
    >
      <div
        data-accessibility-elements-hidden="true"
        data-accessible="false"
        data-important-for-accessibility="no-hide-descendants"
        data-style="[{"height":16,"width":"40%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
        data-testid="skeleton-block"
      />
      <div
        data-style="{"height":8}"
      />
      <div
        data-accessibility-elements-hidden="true"
        data-accessible="false"
        data-important-for-accessibility="no-hide-descendants"
        data-style="[{"height":12,"width":"70%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
        data-testid="skeleton-block"
      />
      <div
        data-style="{"height":12}"
      />
      <div
        data-accessibility-elements-hidden="true"
        data-accessible="false"
        data-important-for-accessibility="no-hide-descendants"
        data-style="[{"height":36,"width":"100%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
        data-testid="skeleton-block"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScreenSkeleton > renders the list skeleton structure 1`] = `
<DocumentFragment>
  <div
    data-style="{"flex":1,"padding":16,"gap":12}"
    data-testid="screen-skeleton-list"
  >
    <div
      data-accessibility-elements-hidden="true"
      data-accessible="false"
      data-important-for-accessibility="no-hide-descendants"
      data-style="[{"height":80,"width":"100%","borderRadius":16,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
      data-testid="skeleton-block"
    />
    <div
      data-style="{"height":16}"
    />
    <div
      data-style="{"padding":12,"borderRadius":16}"
      data-testid="list-card"
    >
      <div
        data-style="{"flexDirection":"row","alignItems":"center","justifyContent":"space-between"}"
      >
        <div
          data-style="{"flex":1,"gap":4}"
        >
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":14,"width":"50%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":10,"width":"30%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
        </div>
        <div
          data-accessibility-elements-hidden="true"
          data-accessible="false"
          data-important-for-accessibility="no-hide-descendants"
          data-style="[{"height":16,"width":60,"borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
          data-testid="skeleton-block"
        />
      </div>
    </div>
    <div
      data-style="{"padding":12,"borderRadius":16}"
      data-testid="list-card"
    >
      <div
        data-style="{"flexDirection":"row","alignItems":"center","justifyContent":"space-between"}"
      >
        <div
          data-style="{"flex":1,"gap":4}"
        >
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":14,"width":"50%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":10,"width":"30%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
        </div>
        <div
          data-accessibility-elements-hidden="true"
          data-accessible="false"
          data-important-for-accessibility="no-hide-descendants"
          data-style="[{"height":16,"width":60,"borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
          data-testid="skeleton-block"
        />
      </div>
    </div>
    <div
      data-style="{"padding":12,"borderRadius":16}"
      data-testid="list-card"
    >
      <div
        data-style="{"flexDirection":"row","alignItems":"center","justifyContent":"space-between"}"
      >
        <div
          data-style="{"flex":1,"gap":4}"
        >
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":14,"width":"50%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":10,"width":"30%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
        </div>
        <div
          data-accessibility-elements-hidden="true"
          data-accessible="false"
          data-important-for-accessibility="no-hide-descendants"
          data-style="[{"height":16,"width":60,"borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
          data-testid="skeleton-block"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScreenSkeleton > renders the settings skeleton structure 1`] = `
<DocumentFragment>
  <div
    data-style="{"flex":1,"padding":16,"gap":12}"
    data-testid="screen-skeleton-settings"
  >
    <div
      data-style="{"padding":16,"borderRadius":16,"gap":8}"
      data-testid="settings-card"
    >
      <div
        data-style="{"flexDirection":"row","alignItems":"center","gap":12}"
      >
        <div
          data-accessibility-elements-hidden="true"
          data-accessible="false"
          data-important-for-accessibility="no-hide-descendants"
          data-style="[{"height":20,"width":20,"borderRadius":9999,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
          data-testid="skeleton-block"
        />
        <div
          data-style="{"flex":1,"gap":4}"
        >
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":14,"width":"60%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":10,"width":"40%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
        </div>
        <div
          data-accessibility-elements-hidden="true"
          data-accessible="false"
          data-important-for-accessibility="no-hide-descendants"
          data-style="[{"height":24,"width":44,"borderRadius":9999,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
          data-testid="skeleton-block"
        />
      </div>
    </div>
    <div
      data-style="{"padding":16,"borderRadius":16,"gap":8}"
      data-testid="settings-card"
    >
      <div
        data-style="{"flexDirection":"row","alignItems":"center","gap":12}"
      >
        <div
          data-accessibility-elements-hidden="true"
          data-accessible="false"
          data-important-for-accessibility="no-hide-descendants"
          data-style="[{"height":20,"width":20,"borderRadius":9999,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
          data-testid="skeleton-block"
        />
        <div
          data-style="{"flex":1,"gap":4}"
        >
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":14,"width":"60%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
          <div
            data-accessibility-elements-hidden="true"
            data-accessible="false"
            data-important-for-accessibility="no-hide-descendants"
            data-style="[{"height":10,"width":"40%","borderRadius":12,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
            data-testid="skeleton-block"
          />
        </div>
        <div
          data-accessibility-elements-hidden="true"
          data-accessible="false"
          data-important-for-accessibility="no-hide-descendants"
          data-style="[{"height":24,"width":44,"borderRadius":9999,"backgroundColor":"#E5E7EB"},{"opacity":0.3}]"
          data-testid="skeleton-block"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
